--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+}
+
+h1 {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    margin: 10px;
+}
+
+p {
+    font-family: 'Verdana', sans-serif;
+    color: #666;
+    line-height: 1.6;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+a {
+    margin: 5px;
+    display: block;
 }
